<resources>
    <string name="app_name">Home Helper</string>

    <string name="et_sign_in_unique_hint">Уникальный код</string>
    <string name="et_sign_in_email_hint">E-mail</string>
    <string name="et_sign_in_password_hint">Пароль</string>
    <string name="et_sign_in_repeat_password_hint">Повторите пароль</string>
    <string name="et_login_password_hint">Введите ваш пароль…</string>
    <string name="et_flat_num_hint">Введите номер квартиры…</string>
    <string name="bt_sign_in">Зарегистрироваться</string>
    <string name="bt_log_in">Войти</string>
    <string name="tv_no_account">У меня нет аккаунта</string>
    <string name="fab_add_event_content_desc">add_event</string>
    <string name="edit_text_message">Введите сообщение…</string>
    <string name="chat_image_content_desc">image_message</string>
    <string name="search_view_hint">Поиск…</string>

    <string name="events_fr_services_title">Сервисы</string>
    <string name="events_fr_more"><![CDATA[Ещё ->]]></string>
    <string name="events_fr_total_sum">Всего к оплате</string>
    <string name="events_fr_service_1">Оплата счетов</string>
    <string name="events_fr_service_2">Получить квитанцию</string>
    <string name="events_fr_service_3">Показания счётчиков</string>
    <string name="events_fr_filter_1">Все</string>
    <string name="events_fr_filter_2">УК "Огонь"</string>
    <string name="events_fr_filter_3">Жильцы</string>
    <string name="events_fr_bottom_title">Объявления</string>
    <string name="search_icon_content_desc">Search icon</string>
    <string name="bell_button_content_desc">Bell</string>
    <string name="settings_button_content_desc">Settings</string>

    <string name="services_fr_services_title">Тарифы</string>
    <string name="chats_list_fr_neighbors">Мои соседи</string>
    <string name="chats_list_fr_bottom_title">Список чатов</string>
    <string name="payments_fr_bottom_title">История</string>
    <string name="payments_fr_button_pay">Оплатить</string>
    <string name="meters_data_fr_button_send">Отправить</string>
    <string name="bills_fr_title">Квитанции</string>
    <string name="new_message_fr_title">Новое сообщение</string>
    <string name="payments_fr_title">Оплата счетов</string>
    <string name="meters_data_fr_title">Счётчики</string>
    <string name="auth_tv_uk_company_name">УК\n"Огонь"</string>
    <string name="auth_tv_out_company_name">Home\nSolutions</string>

    <string-array name="calculator_residents_groups">
        <item>18 – 24</item>
        <item>24 – 35</item>
        <item>35 – 55</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>