<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.auth.LogInFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/auth_gl_v1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/auth_gl_v2" />

    <TextView
        android:id="@+id/tv_our_logo"
        style="@style/AuthLogo"
        android:text="HS"
        app:layout_constraintStart_toStartOf="@+id/gl_v1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_our_company_name"
        style="@style/AuthCompanyName"
        android:text="@string/auth_tv_out_company_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_our_logo"
        app:layout_constraintStart_toEndOf="@+id/tv_our_logo"
        app:layout_constraintTop_toTopOf="@+id/tv_our_logo" />

    <TextView
        android:id="@+id/tv_amid_logos"
        style="@style/AuthBetweenCompanyNames"
        android:text="X"
        app:layout_constraintBottom_toBottomOf="@+id/tv_our_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_our_logo" />

    <TextView
        android:id="@+id/tv_uk_logo"
        style="@style/AuthLogo"
        android:text="UK"
        app:layout_constraintEnd_toEndOf="@+id/gl_v2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_uk_company_name"
        style="@style/AuthCompanyName"
        android:gravity="end"
        android:text="@string/auth_tv_uk_company_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_our_logo"
        app:layout_constraintEnd_toStartOf="@id/tv_uk_logo"
        app:layout_constraintTop_toTopOf="@+id/tv_our_logo" />

    <TextView
        android:id="@+id/tv_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.7"
        android:text="Добро\nпожаловать!"
        android:textColor="@color/main"
        android:textSize="@dimen/auth_greetings_ts"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toStartOf="@+id/gl_v2"
        app:layout_constraintStart_toStartOf="@+id/gl_v1"
        app:layout_constraintTop_toBottomOf="@+id/tv_amid_logos" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        style="@style/AuthEt"
        android:layout_marginBottom="@dimen/auth_field_margin_bottom"
        android:hint="@string/et_sign_in_email_hint"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="@id/gl_v2"
        app:layout_constraintStart_toStartOf="@id/gl_v1" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        style="@style/AuthEt"
        android:layout_marginBottom="@dimen/auth_last_field_margin_bottom"
        android:hint="@string/et_sign_in_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/bt_log_in"
        app:layout_constraintEnd_toEndOf="@id/gl_v2"
        app:layout_constraintStart_toStartOf="@id/gl_v1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Забыли пароль?"
        android:layout_marginTop="6dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/gl_v1"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_recover_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Восстановить"
        android:textColor="@color/main"
        android:layout_marginTop="6dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <View
        android:layout_width="0dp"
        android:layout_height="0.8dp"
        android:background="@color/main"
        app:layout_constraintStart_toStartOf="@id/tv_recover_password"
        app:layout_constraintEnd_toEndOf="@id/tv_recover_password"
        app:layout_constraintTop_toBottomOf="@id/tv_recover_password"/>

    <Button
        android:id="@+id/bt_log_in"
        style="@style/AuthButtonMain"
        android:layout_marginBottom="@dimen/auth_bt_main_margin_bottom"
        android:text="@string/bt_log_in"
        app:layout_constraintBottom_toTopOf="@+id/line_between_buttons"
        app:layout_constraintEnd_toEndOf="@id/gl_v2"
        app:layout_constraintStart_toStartOf="@id/gl_v1" />

    <View
        android:id="@+id/line_between_buttons"
        android:layout_width="@dimen/auth_line_width"
        android:layout_height="@dimen/auth_line_height"
        android:layout_marginBottom="@dimen/auth_line_margin_bottom"
        android:background="@color/main_transparent"
        app:layout_constraintStart_toStartOf="@id/gl_v1"
        app:layout_constraintEnd_toEndOf="@id/gl_v2"
        app:layout_constraintBottom_toTopOf="@id/bt_alt_sign_in"/>

    <Button
        android:id="@+id/bt_alt_sign_in"
        android:text="@string/bt_sign_in"
        style="@style/AuthButtonAlt"
        android:layout_marginBottom="@dimen/auth_bt_alt_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_v2"
        app:layout_constraintStart_toStartOf="@id/gl_v1" />


</androidx.constraintlayout.widget.ConstraintLayout>