<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/front_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/main_vertical_gl_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/main_vertical_gl_right" />


    <LinearLayout
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_default"
        android:background="@drawable/search_view_rounded"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/gl_v1"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/search_icon_margin"
            android:contentDescription="@string/search_icon_content_desc"
            android:src="@drawable/search_icon" />

        <EditText
            android:id="@+id/searchViewEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:layout_weight="1"
            android:background="@drawable/search_view_rounded"
            android:cursorVisible="false"
            android:hint="@string/search_view_hint"
            android:orientation="horizontal"
            android:singleLine="true" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageButton"
        style="@style/MainRoundImageButtonWhite"
        android:layout_marginStart="@dimen/margin_default"
        android:contentDescription="@string/bell_button_content_desc"
        android:src="@drawable/main_bell"
        app:layout_constraintBottom_toBottomOf="@id/searchView"
        app:layout_constraintEnd_toEndOf="@id/gl_v2"
        app:layout_constraintStart_toEndOf="@id/searchView"
        app:layout_constraintTop_toTopOf="@id/searchView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

