<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.chats.ChatFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/main_vertical_gl_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/main_vertical_gl_right" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_max_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom" />


    <ImageView
        android:id="@+id/bt_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circle_background_ripple"
        android:clickable="true"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="@dimen/margin_default"
        android:contentDescription="@string/bell_button_content_desc"
        android:src="@drawable/back_arrow_black"
        app:layout_constraintBottom_toBottomOf="@id/tv_chat_name"
        app:layout_constraintStart_toStartOf="@id/gl_v1"
        app:layout_constraintTop_toTopOf="@id/tv_chat_name"
        android:focusable="true" />

    <TextView
        android:id="@+id/tv_chat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_dark"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/new_message_fr_title"
        app:layout_constraintBottom_toBottomOf="@id/barrier_max_height"
        app:layout_constraintStart_toEndOf="@id/bt_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circle_background_ripple"
        android:clickable="true"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginEnd="@dimen/margin_default"
        android:contentDescription="@string/bell_button_content_desc"
        android:src="@drawable/search_icon"
        app:layout_constraintBottom_toBottomOf="@id/tv_chat_name"
        app:layout_constraintEnd_toEndOf="@id/gl_v2"
        app:layout_constraintTop_toTopOf="@id/tv_chat_name"
        android:focusable="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/item_my_message"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/et_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_chat_name" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/edit_text_message"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/rv_messages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_send_message"
        app:layout_constraintStart_toEndOf="@+id/bt_attach_image_to_message" />

    <ImageButton
        android:id="@+id/bt_attach_image_to_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fragment_chat_add_media"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_messages" />

    <ImageButton
        android:id="@+id/bt_send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:src="@drawable/fragment_chat_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_messages" />

</androidx.constraintlayout.widget.ConstraintLayout>