<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:background="@color/main"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.services.MetersDataFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/main_vertical_gl_left" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/main_vertical_gl_right" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_max_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_peek_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top" />

        <ImageView
            android:id="@+id/imageButtonBack"
            style="@style/MainRoundImageButton"
            android:layout_marginStart="@dimen/margin_default"
            android:contentDescription="@string/bell_button_content_desc"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="@id/gl_v1"
            app:layout_constraintBottom_toBottomOf="@id/searchView"
            app:layout_constraintTop_toTopOf="@id/searchView" />

        <TextView
            android:id="@+id/searchView"
            style="@style/MainTitle"
            android:text="@string/meters_data_fr_title"
            app:layout_constraintBottom_toBottomOf="@id/barrier_max_height"
            app:layout_constraintStart_toEndOf="@id/imageButtonBack"
            app:layout_constraintTop_toTopOf="parent"/>



        <ImageView
            android:id="@+id/imageButton"
            style="@style/PaymentsRoundImageButtonWhite"
            android:layout_marginStart="@dimen/margin_default"
            android:contentDescription="@string/bell_button_content_desc"
            android:src="@drawable/question"
            app:layout_constraintBottom_toBottomOf="@id/searchView"
            app:layout_constraintEnd_toEndOf="@id/gl_v2"
            app:layout_constraintTop_toTopOf="@id/searchView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_margin="@dimen/margin_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/square_background"
            android:orientation="vertical"
            android:padding="@dimen/padding_default"
            app:layout_constraintEnd_toEndOf="@id/gl_v2"
            app:layout_constraintStart_toStartOf="@id/gl_v1"
            app:layout_constraintTop_toBottomOf="@+id/barrier_max_height">


            <TextView
                android:id="@+id/textView3"
                style="@style/MetersDataMeterName"
                android:text="Юпитер-98"
                app:layout_constraintEnd_toStartOf="@id/iv_add_image_meter_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_add_image_meter_data"
                style="@style/MetersDataAddImageButton"
                android:src="@drawable/add_image_meter_data"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                style="@style/MetersDataLightDarkText"
                android:text="Счёт за электричество"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/main_dark"
                android:layout_marginVertical="@dimen/margin_default"
                android:text="Введите показания кВт*ч"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/et_electricity_meter_data"
                app:layout_constraintTop_toBottomOf="@id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="350"
                android:textSize="14sp"
                android:layout_margin="@dimen/margin_default"
                android:background="@drawable/meter_data_et_background"
                android:layout_width="0dp"
                android:layout_height="35dp"/>

            <TextView
                android:id="@+id/last_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_electricity_meter_data"
                android:text="38201"
                android:textStyle="bold"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="22sp"
                android:textColor="@color/main_dark"/>

            <TextView
                android:id="@+id/textView6"
                style="@style/MetersDataLightDarkText"
                android:text="Показания на 26.10.2022 кВт*ч"
                app:layout_constraintStart_toStartOf="@+id/last_data"
                app:layout_constraintTop_toBottomOf="@+id/last_data" />

            <TextView
                android:id="@+id/current_tariff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textView6"
                android:text="2,8"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/main_dark"/>

            <TextView
                android:id="@+id/textView7"
                style="@style/MetersDataLightDarkText"
                android:text="Актуальный тариф на 28.10.2022"
                android:layout_marginBottom="@dimen/margin_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/current_tariff"
                app:layout_constraintTop_toBottomOf="@+id/current_tariff" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/bt_pay"
            style="@style/PaymentsFragmentButtonPay"
            android:text="@string/payments_fr_button_pay"
            app:layout_constraintBottom_toBottomOf="@id/barrier_peek_height"
            app:layout_constraintEnd_toEndOf="@id/linearLayout"
            app:layout_constraintStart_toStartOf="@id/linearLayout"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />



    </androidx.constraintlayout.widget.ConstraintLayout>


